# fastq-chunk

./: LICENSE  README.md  benchmark_fastq_chunk.py  degrade_fastq.py  fastq_chunk.py  profile_chunk_memory.py  pyproject.toml  template.py
.github/workflows/: ci.yml
testing/: BENCHMARK_GUIDE.md  benchmark_fastq_chunk.py  benchmark_results.txt  profile_chunk_memory.py
tests/: conftest.py  test_calculate_chunk_size.py  test_get_read_dimensions.py  test_iter_chunks.py  test_iter_chunks_paired.py  test_run_parallel.py  test_run_parallel_paired.py
