[tool.setuptools]
py-modules = ["fastq_chunk"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastq-chunk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dnaio",
    "numpy",
]
description = "Python library for processing fastq files in a multithreaded environment"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dkbiocode/fastq-chunk"
Issues = "https://github.com/dkbiocode/fastq-chunk/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/dkbiocode/fastq-chunk"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: mark test as requiring real sample data files (slow)"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
